# MYP-Proyecto2

./: .gitignore  AUTHORS  DataBase.db  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
lib/: DataBase.db  DataBaseUI.glade
src/: DataBaseUI.glade  Makefile  Makefile.am  Makefile.in  c-controlador.vala  m-base-datos.vala  m-consultas-select.vala  m-consultas.vala  m-modelo.vala  m-operaciones-bd.vala  m-tablas.vala  main.vala  v-interfaz.vala
