AM_CPPFLAGS = $(PROYECTO2_CFLAGS)
AM_VALAFLAGS = $(VALAFLAGS)

bin_PROGRAMS = proyecto2

proyecto2_SOURCES =	  		\
	v-interfaz.vala			\
	c-controlador.vala		\
	m-modelo.vala			\
	m-tablas.vala			\
	m-base-datos.vala		\
	m-consultas.vala		\
	m-consultas-select.vala		\
	main.vala

proyecto2_VALAFLAGS = $(AM_VALAFLAGS)


